#869. Add null checks for field values before using them to construct routing header params map. - Add test cases for all the examples provided in routing.proto. Move all testing protos for explicit routing headers to its own package and bazel rule. - Switch to inline String format for error messages.

--- a/src/test/java/com/google/api/generator/gapic/composer/common/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/composer/common/BUILD.bazel
@@ -29,6 +29,7 @@ TEST_DEPS = [
     "//src/test/java/com/google/api/generator/gapic/testdata:deprecated_service_java_proto",
     "//src/test/java/com/google/api/generator/gapic/testdata:bookshop_java_proto",
     "//src/test/java/com/google/api/generator/gapic/testdata:showcase_java_proto",
+    "//src/test/java/com/google/api/generator/gapic/testdata:explicit_dynamic_routing_headers_testing_java_proto",
     "//src/test/java/com/google/api/generator/gapic/testdata:testgapic_java_proto",
     "@com_google_api_api_common//jar",
     "@com_google_api_gax_java//gax",
