--- a/src/test/java/com/google/api/generator/gapic/composer/grpc/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/composer/grpc/BUILD.bazel
@@ -36,6 +36,7 @@ TEST_DEPS = [
     "//src/main/java/com/google/api/generator/gapic/protoparser",
     "//src/main/java/com/google/api/generator/gapic/composer/defaultvalue",
     "//src/test/java/com/google/api/generator/gapic/testdata:showcase_java_proto",
+    "//src/test/java/com/google/api/generator/gapic/testdata:explicit_dynamic_routing_headers_testing_java_proto",
     "@com_google_api_api_common//jar",
     "@com_google_api_gax_java//gax",
     "@com_google_api_api_common",
