--- a/src/test/java/com/google/api/generator/gapic/protoparser/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/protoparser/BUILD.bazel
@@ -44,6 +44,7 @@ filegroup(
         "//src/main/java/com/google/api/generator/gapic/utils",
         "//src/test/java/com/google/api/generator/gapic/testdata:bookshop_java_proto",
         "//src/test/java/com/google/api/generator/gapic/testdata:showcase_java_proto",
+        "//src/test/java/com/google/api/generator/gapic/testdata:explicit_dynamic_routing_headers_testing_java_proto",
         "//src/test/java/com/google/api/generator/gapic/testdata:testgapic_java_proto",
         "@com_google_api_api_common//jar",
         "@com_google_googleapis//google/api:api_java_proto",
