chore: make integration test infrastructure sane (#904)
The you-can-do-anything-in-bazel mentality can easily lure one to a state where you are programming a build with a build tool instead of configuring a build.

I just extracted the shell script portion out of a `.bzl` file into a file.

This should also help switching to any build system from Bazel.

--- a/gapic-generator-java/test/integration/BUILD.bazel
+++ b/gapic-generator-java/test/integration/BUILD.bazel
@@ -9,11 +9,7 @@ load(
     "java_gapic_assembly_gradle_pkg",
 )
 load("@rules_gapic//:gapic.bzl", "proto_library_with_info")
-load(
-    "//:rules_bazel/java/integration_test.bzl",
-    "golden_update",
-    "integration_test",
-)
+load("//:rules_bazel/java/integration_test.bzl", "golden_update")
 load("@rules_proto//proto:defs.bzl", "proto_library")
 
 package(default_visibility = ["//visibility:public"])
@@ -49,10 +45,14 @@ API_GAPIC_TARGETS = {
     "compute": "@com_google_googleapis_discovery//google/cloud/compute/v1:compute_small_java_gapic",
 }
 
-[integration_test(
+[sh_test(
     name = lib_name,
-    data = ["//test/integration/goldens/%s:goldens_files" % lib_name],
-    target = API_GAPIC_TARGETS[lib_name],
+    srcs = ["//scripts:diff_gen_and_golden.sh"],
+    args = [lib_name],
+    data = [
+      API_GAPIC_TARGETS[lib_name] + "_srcjar_raw.srcjar",
+      "//test/integration/goldens/%s:goldens_files" % lib_name,
+    ],
 ) for lib_name in INTEGRATION_TEST_LIBRARIES]
 
 [golden_update(
