chore: re-work generating unit goldens

--- a/scripts/BUILD.bazel
+++ b/scripts/BUILD.bazel
@@ -1,3 +1,7 @@
 package(default_visibility = ["//test/integration:__pkg__"])
 
-exports_files(["diff_gen_and_golden.sh", "update_golden.sh"])
+exports_files([
+    "diff_gen_and_golden.sh",
+    "update_golden.sh",
+    "update_unit_golden.sh",
+])
