--- a/src/test/java/com/google/api/generator/gapic/composer/resourcename/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/composer/resourcename/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@rules_java//java:defs.bzl", "java_proto_library", "java_test")
-load("//:rules_bazel/java/java_diff_test.bzl", "golden_update")
+load("//:rules_bazel/unit_golden_update.bzl", "golden_update")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -13,7 +13,7 @@ TESTS = UPDATE_GOLDENS_TESTS + [
 
 filegroup(
     name = "resourcename_files",
-    srcs = ["{0}.java".format(f) for f in TESTS],
+    srcs = ["%s.java" % f for f in TESTS],
 )
 
 TEST_DEPS = [
@@ -40,13 +40,13 @@ TEST_DEPS = [
 
 [java_test(
     name = test_name,
-    srcs = ["{0}.java".format(test_name)],
+    srcs = ["%s.java" % test_name],
     data = [
         "//src/test/java/com/google/api/generator/gapic/composer/resourcename/goldens:goldens_files",
         "//src/test/java/com/google/api/generator/gapic/testdata:gapic_config_files",
         "//src/test/java/com/google/api/generator/gapic/testdata:service_config_files",
     ],
-    test_class = "com.google.api.generator.gapic.composer.resourcename.{0}".format(test_name),
+    test_class = "com.google.api.generator.gapic.composer.resourcename.%s" % test_name,
     deps = TEST_DEPS,
 ) for test_name in TESTS]
 
@@ -62,15 +62,15 @@ java_proto_library(
 # `ServiceClient*` tests are not supported now since they are still in active development.
 
 [golden_update(
-    name = "{0}_update".format(test_name),
+    name = "%s_update" % test_name,
     srcs = [
-        "{0}.java".format(test_name),
+        "%s.java" % test_name,
     ],
     data = [
         "//src/test/java/com/google/api/generator/gapic/composer/resourcename/goldens:goldens_files",
         "//src/test/java/com/google/api/generator/gapic/testdata:gapic_config_files",
         "//src/test/java/com/google/api/generator/gapic/testdata:service_config_files",
     ],
-    test_class = "com.google.api.generator.gapic.composer.resourcename.{0}".format(test_name),
+    test_class = "com.google.api.generator.gapic.composer.resourcename.%s" % test_name,
     deps = TEST_DEPS,
 ) for test_name in UPDATE_GOLDENS_TESTS]
