--- a/src/test/java/com/google/api/generator/engine/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/engine/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@rules_java//java:defs.bzl", "java_test")
-load("//:rules_bazel/java/java_diff_test.bzl", "golden_update")
+load("//:rules_bazel/unit_golden_update.bzl", "golden_update")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -26,20 +26,18 @@ TEST_DEPS = [
 
 [java_test(
     name = test_name,
-    srcs = ["{0}.java".format(test_name)],
+    srcs = ["%s.java" % test_name],
     data = ["//src/test/java/com/google/api/generator/engine/goldens:goldens_files"],
-    test_class = "com.google.api.generator.engine.{0}".format(test_name),
+    test_class = "com.google.api.generator.engine.%s" % test_name,
     deps = TEST_DEPS,
 ) for test_name in TESTS]
-
-TEST_CLASS_NAME = "com.google.api.generator.engine.JavaCodeGeneratorTest"
 
 # Run `bazel run src/test/java/com/google/api/generator/engine:JavaCodeGeneratorTest_update`
 # to update goldens as expected generated code.
 [golden_update(
-    name = "{0}_update".format(test_name),
-    srcs = ["{0}.java".format(test_name)],
+    name = "%s_update" % test_name,
+    srcs = ["%s.java" % test_name],
     data = ["//src/test/java/com/google/api/generator/engine/goldens:goldens_files"],
-    test_class = "com.google.api.generator.engine.{0}".format(test_name),
+    test_class = "com.google.api.generator.engine.%s" % test_name,
     deps = TEST_DEPS,
 ) for test_name in TESTS]
