--- a/src/test/java/com/google/api/generator/gapic/composer/common/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/composer/common/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@rules_java//java:defs.bzl", "java_proto_library", "java_test")
-load("//:rules_bazel/java/java_diff_test.bzl", "golden_update")
+load("//:rules_bazel/unit_golden_update.bzl", "golden_update")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -70,14 +70,14 @@ java_proto_library(
 [java_test(
     name = test_name,
     srcs = [
-        "{0}.java".format(test_name),
+        "%s.java" % test_name,
     ],
     data = [
         "//src/test/java/com/google/api/generator/gapic/composer/common/goldens:goldens_files",
         "//src/test/java/com/google/api/generator/gapic/testdata:gapic_config_files",
         "//src/test/java/com/google/api/generator/gapic/testdata:service_config_files",
     ],
-    test_class = "com.google.api.generator.gapic.composer.common.{0}".format(test_name),
+    test_class = "com.google.api.generator.gapic.composer.common.%s" % test_name,
     deps = TEST_DEPS + [":common"],
 ) for test_name in TESTS]
 
@@ -86,15 +86,15 @@ java_proto_library(
 # `ServiceClient*` tests are not supported now since they are still in active development.
 
 [golden_update(
-    name = "{0}_update".format(test_name),
+    name = "%s_update" % test_name,
     srcs = [
-        "{0}.java".format(test_name),
+        "%s.java" % test_name,
     ],
     data = [
         "//src/test/java/com/google/api/generator/gapic/composer/common/goldens:goldens_files",
         "//src/test/java/com/google/api/generator/gapic/testdata:gapic_config_files",
         "//src/test/java/com/google/api/generator/gapic/testdata:service_config_files",
     ],
-    test_class = "com.google.api.generator.gapic.composer.common.{0}".format(test_name),
+    test_class = "com.google.api.generator.gapic.composer.common.%s" % test_name,
     deps = TEST_DEPS + [":common"],
 ) for test_name in UPDATE_GOLDENS_TESTS]
