--- a/src/test/java/com/google/api/generator/engine/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/engine/BUILD.bazel
@@ -1,5 +1,4 @@
 load("@rules_java//java:defs.bzl", "java_test")
-load("//:rules_bazel/unit_golden_update.bzl", "golden_update")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -34,10 +33,12 @@ TEST_DEPS = [
 
 # Run `bazel run src/test/java/com/google/api/generator/engine:JavaCodeGeneratorTest_update`
 # to update goldens as expected generated code.
-[golden_update(
+[java_binary(
     name = "%s_update" % test_name,
     srcs = ["%s.java" % test_name],
     data = ["//src/test/java/com/google/api/generator/engine/goldens:goldens_files"],
-    test_class = "com.google.api.generator.engine.%s" % test_name,
+    main_class = "com.google.api.generator.test.framework.SingleJUnitTestRunner",
+    args = ["com.google.api.generator.engine.%s" % test_name],
     deps = TEST_DEPS,
+    runtime_deps = ["//src/test/java/com/google/api/generator/test/framework:junit_runner"],
 ) for test_name in TESTS]
