--- a/src/test/java/com/google/api/generator/gapic/composer/rest/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/composer/rest/BUILD.bazel
@@ -1,5 +1,4 @@
 load("@rules_java//java:defs.bzl", "java_proto_library", "java_test")
-load("//:rules_bazel/unit_golden_update.bzl", "golden_update")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -77,16 +76,16 @@ java_proto_library(
 # to update goldens as expected generated code.
 # `ServiceClient*` tests are not supported now since they are still in active development.
 
-[golden_update(
+[java_binary(
     name = "%s_update" % test_name,
-    srcs = [
-        "%s.java" % test_name,
-    ] + COMMON_SRCS,
+    srcs = ["%s.java" % test_name] + COMMON_SRCS,
     data = [
         "//src/test/java/com/google/api/generator/gapic/composer/rest/goldens:goldens_files",
         "//src/test/java/com/google/api/generator/gapic/testdata:gapic_config_files",
         "//src/test/java/com/google/api/generator/gapic/testdata:service_config_files",
     ],
-    test_class = "com.google.api.generator.gapic.composer.rest.%s" % test_name,
+    main_class = "com.google.api.generator.test.framework.SingleJUnitTestRunner",
+    args = ["com.google.api.generator.gapic.composer.rest.%s" % test_name],
     deps = TEST_DEPS,
+    runtime_deps = ["//src/test/java/com/google/api/generator/test/framework:junit_runner"],
 ) for test_name in TESTS]
