#869. Add field type validation for String type. Add more unit tests for edge cases. Resolve review comments and some small refactoring.

--- a/src/test/java/com/google/api/generator/gapic/model/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/model/BUILD.bazel
@@ -7,7 +7,7 @@ TESTS = [
     "MethodArgumentTest",
     "MethodTest",
     "MessageTest",
-    "RoutingHeadersTest",
+    "RoutingHeaderParamTest",
 ]
 
 filegroup(
