--- a/src/test/java/com/google/api/generator/gapic/protoparser/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/protoparser/BUILD.bazel
@@ -16,7 +16,8 @@ TESTS = [
     "ServiceYamlParserTest",
     "SourceCodeInfoParserTest",
     "TypeParserTest",
-    "RoutingRuleParserTest"
+    "RoutingRuleParserTest",
+    "PatternParserTest",
 ]
 
 filegroup(
