--- a/src/main/java/com/google/api/generator/engine/escaper/BUILD.bazel
+++ b/src/main/java/com/google/api/generator/engine/escaper/BUILD.bazel
@@ -1,17 +1,10 @@
 load("@rules_java//java:defs.bzl", "java_library")
 
-package(default_visibility = ["//visibility:public"])
-
-filegroup(
-    name = "escaper_files",
-    srcs = glob(["*.java"]),
-)
+package(default_visibility = ["//:__subpackages__"])
 
 java_library(
     name = "escaper",
-    srcs = [
-        ":escaper_files",
-    ],
+    srcs = glob(["*.java"]),
     deps = [
         "@com_google_guava_guava//jar",
     ],
