--- a/src/test/java/com/google/api/generator/test/framework/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/test/framework/BUILD.bazel
@@ -1,11 +1,6 @@
 load("@rules_java//java:defs.bzl", "java_library")
 
-package(default_visibility = ["//visibility:public"])
-
-filegroup(
-    name = "framework_files",
-    srcs = glob(["*.java"]),
-)
+package(default_visibility = ["//:__subpackages__"])
 
 java_library(
     name = "asserts",
