chore: use the old formatter jar

--- a/src/main/java/com/google/api/generator/gapic/BUILD.bazel
+++ b/src/main/java/com/google/api/generator/gapic/BUILD.bazel
@@ -1,5 +1,7 @@
 load("@rules_java//java:defs.bzl", "java_library", "java_proto_library")
 
+package(default_visibility = ["//:__subpackages__"])
+
 java_proto_library(
     name = "status_java_proto",
     visibility = [
