--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -83,7 +83,7 @@ java_binary(
     name = "google_java_format_binary",
     jvm_flags = ["-Xmx512m"],
     main_class = "com.google.googlejavaformat.java.Main",
-    runtime_deps = ["@maven//:com_google_googlejavaformat_google_java_format_all_deps"],
+    runtime_deps = ["@google_java_format_all_deps//jar"],
 )
 
 genrule(
