--- a/src/test/java/com/google/api/generator/gapic/model/BUILD.bazel
+++ b/src/test/java/com/google/api/generator/gapic/model/BUILD.bazel
@@ -6,6 +6,8 @@ TESTS = [
     "GapicServiceConfigTest",
     "MethodArgumentTest",
     "MethodTest",
+    "MessageTest",
+    "RoutingHeaderParamTest",
 ]
 
 filegroup(
