feat: Support explicit dynamic routing header (#887)
This PR is to support explicit dynamic routing header feature proposed in go/actools-dynamic-routing-proposal.

All examples provided in routing.proto are covered by golden files unit tests.
Added validation that the field has to be of String type as suggested(Compare to implicit routing headers support primitive types as well).
For nested fields, when getting field values, added null check for each level to prevent null pointer exception during runtime.

--- a/gapic-generator-java/src/test/java/com/google/api/generator/gapic/model/BUILD.bazel
+++ b/gapic-generator-java/src/test/java/com/google/api/generator/gapic/model/BUILD.bazel
@@ -6,6 +6,8 @@ TESTS = [
     "GapicServiceConfigTest",
     "MethodArgumentTest",
     "MethodTest",
+    "MessageTest",
+    "RoutingHeaderParamTest",
 ]
 
 filegroup(
