chore: re-work build infra, primarily around code format machinery (#915)
- Removes `gapic_generator_java.bzl`.

- `:google_java_format_verification` is now working. (Fixes #914.)

- `:google_java_format_verification` now runs with `bazel run` instead of `bazel build`, which is consistent with how `:google_java_format` runs.

- Removes manual listing of files to format, which is error-prone. This actually revealed that we were missing out some files for formatting. (For example, `AbstractTransportServiceStubClassComposer.java` had an unused import.) 

- Removes unnecessary `filegroup` definitions triggered by removing manual file listing.

- Reduces visibility of many packages.

--- a/gapic-generator-java/src/main/java/com/google/api/generator/gapic/protowriter/BUILD.bazel
+++ b/gapic-generator-java/src/main/java/com/google/api/generator/gapic/protowriter/BUILD.bazel
@@ -1,17 +1,10 @@
 load("@rules_java//java:defs.bzl", "java_library")
 
-package(default_visibility = ["//visibility:public"])
-
-filegroup(
-    name = "protowriter_files",
-    srcs = glob(["*.java"]),
-)
+package(default_visibility = ["//:__subpackages__"])
 
 java_library(
     name = "protowriter",
-    srcs = [
-        ":protowriter_files",
-    ],
+    srcs = glob(["*.java"]),
     deps = [
         "//src/main/java/com/google/api/generator/engine/ast",
         "//src/main/java/com/google/api/generator/engine/writer",
