--- a/gapic-generator-java/src/main/java/com/google/api/generator/engine/writer/BUILD.bazel
+++ b/gapic-generator-java/src/main/java/com/google/api/generator/engine/writer/BUILD.bazel
@@ -1,17 +1,10 @@
 load("@rules_java//java:defs.bzl", "java_library")
 
-package(default_visibility = ["//visibility:public"])
-
-filegroup(
-    name = "writer_files",
-    srcs = glob(["*.java"]),
-)
+package(default_visibility = ["//:__subpackages__"])
 
 java_library(
     name = "writer",
-    srcs = [
-        ":writer_files",
-    ],
+    srcs = glob(["*.java"]),
     deps = [
         "//src/main/java/com/google/api/generator/engine/ast",
         "@com_google_guava_guava//jar",
