--- a/gapic-generator-java/src/test/java/com/google/api/generator/util/BUILD.bazel
+++ b/gapic-generator-java/src/test/java/com/google/api/generator/util/BUILD.bazel
@@ -1,15 +1,10 @@
 load("@rules_java//java:defs.bzl", "java_test")
 
-package(default_visibility = ["//visibility:public"])
+package(default_visibility = ["//:__subpackages__"])
 
 TESTS = [
     "TrieTest",
 ]
-
-filegroup(
-    name = "util_files",
-    srcs = ["{0}.java".format(f) for f in TESTS],
-)
 
 [java_test(
     name = test_name,
