chore: Add SonarCloud support (#1614)
SonarCloud provides code coverage and static code quality analysis.
https://sonarcloud.io/project/overview?id=googleapis_gax-java

--- a/gax-java/build.gradle
+++ b/gax-java/build.gradle
@@ -8,6 +8,8 @@ plugins {
   id 'com.dorongold.task-tree' version '2.1.0' apply false
   id 'com.github.johnrengelman.shadow' version '7.1.2' apply false
   id 'com.github.sherter.google-java-format' version '0.9' apply false
+
+  id 'org.sonarqube' version '3.3'
 }
 
 // TODO: Populate this from dependencies.properties version property (for proper Gradle-Bazel sync)
@@ -312,4 +314,12 @@ task javadocCombinedV3(type: Javadoc) {
 
 clean {
   delete 'tmp_docs/'
+}
+
+sonarqube {
+  properties {
+    property 'sonar.projectKey', 'googleapis_gax-java'
+    property 'sonar.organization', 'googleapis'
+    property 'sonar.host.url', 'https://sonarcloud.io'
+  }
 }
